# Wild_AgentOS

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  README.zh.md  anchored-summary.md  build.rs  config.yaml  spec.md  workflow.jsonld
.github/workflows/: release-gliding-code.yml
.omo/run-continuation/: ses_0f9783947ffe0o6YBt6MxEswIO.json  ses_103f1532cffe3bVYShypsSng8y.json  ses_107b70230ffenVGaEv0ACCYY0Q.json  ses_10dc5ab98ffelByCYu63MFLpH6.json
.omo/summaries/: anchored-summary.md
apps/gliding_code/: Cargo.toml  fibonacci.py  generate_squares.py  hello.py  main.py  output.json  parse_csv.py  result.json  test.csv
apps/gliding_code/src/: config.rs  engine.rs  log_buffer.rs  main.rs  render.rs  tui.rs
apps/software_engineering_single/: go.mod  (+2 more)
crates/hyperspace-engine/: Cargo.toml
crates/hyperspace-engine/src/: config.rs  engine.rs  error.rs  filter.rs  hnsw.rs  hybrid.rs  hyper_vector.rs  jsonld_meta.rs  lib.rs  metric.rs  open_ontologies.rs  snapshot.rs  storage.rs  tangent.rs  wal.rs
crates/hyperspace-engine/tests/: integration_test.rs
docs/: 03-memory-system.md  05-tool-system.md  09-skill-graph.md  10-background-batch-agent.md  11-behavior-engineering-system.md  12_workspace-filesystem-monitor.md  ADVANCED_FEATURES_DESIGN.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh.md  CORE_DESIGN_PHILOSOPHY.md  CORE_DESIGN_PHILOSOPHY.zh.md  DESIGN_DETAIL.md  DESIGN_DETAIL.zh.md
proto/: pdca_core.proto
scripts/: g++-wrap  gcc-wrap
src/: graph_backend.rs  lib.rs  main.rs  ontology.rs  ontology_bridge.rs  permissions.rs
tests/: 5w2h_integration_test.rs  e2e_5w2h_test.rs  integration_test.rs  mcp_integration_test.rs  programming_demo.rs  research_query_test.rs  research_test_v2.rs  template_demo.rs  template_schemas_test.rs  test_api.py
(+360 files in other folders)
