[package]
name = "hyperspace-engine"
version = "0.1.0"
edition = "2021"
description = "HyperspaceEngine - Embedded spatial memory engine for Gliding Horse Agent OS"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
rand = "0.8"
async-trait = "0.1"
tokio = { version = "1.35", features = ["fs", "io-util", "rt", "macros"] }
bincode = "1.3"

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# WAL
crc32fast = "1.4"

# mmap storage
memmap2 = "0.9"
arc-swap = "1.7"

# Bitmap index
roaring = "0.10"

# Binary format
byteorder = "1.5"

# File locking
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
